sunuo (0.4.5) unstable; urgency=low

  * Makefile: add "./lib/" to MONO_PATH

 --

sunuo (0.4.4) unstable; urgency=low

  * wake up TimerThread during shutdown
  * make Account.Limit configurable (patch by Maik Greubel)
  * new feature "quick-local-connect": do not send relay packets, re-use
    the login connection for gameplay
  * run.sh: kill SunUO process on exit
  * run.sh: don't fall back to w32 binary
  * enable the .NET server GC by default (hint from Kai Sassmannshausen)
  * upgraded Npgsql.dll to 1.0
  * ship the 64 bit / .NET 2.0 binaries for Windows
  * use xmlto instead of xsltproc + docbook-xsl

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Jun 2007 11:46:41 +0200

sunuo (0.4.3) unstable; urgency=low

  * make automatic world save interval configurable, patch by Maik Greubel
  * documentation updates
    - server-list configuration
  * manual locking
    - TimerChangeEntry.m_InstancePool
    - NetState.m_Disposed
  * fixed C# compiler warnings
    - use IPAddress.GetAddressBytes() instead of IPAddress.Address
    - use ScriptCompiler.Libraries instead of ScriptCompiler.Assemblies
    - don't set Listener.Port in Misc/ServerList.cs
    - ignore local port in Encryption

 -- Max Kellermann <max@duempel.org>  Tue,  9 Jan 2007 09:14:50 +0100

sunuo (0.4.2) unstable; urgency=low

  * added interface IPacket, implemented by class Packet
  * implemented abstract packet recycler code
    - recycle MobileMoving
  * continued memory optimizations
    - eliminated most DateTime.Now calls
    - all other DateTime.Now calls are converted to DateTime.UtcNow to avoid
      time zone lookups
    - reuse timer in spawner engine
    - early return when HarrowerTentacles have no drain targets
    - reuse TimerChangeEntry objects
    - NameList: trim strings in initialization, not on every request
  * manual synchronization of TimerThread.m_ChangeQueue
  * obsolete APIs
    - Core.ExePath
    - Core.BaseDirectory
    - ScriptCompiler.Assemblies
    - CrashedEventArgs.Close