@@ -62,6 +62,7 @@ namespace Server.Network
 		private IAccount m_Account;
 		private bool m_CompressionEnabled;
 		private string m_ToString;
+		private ClientVersion m_Version;
 		private bool m_SentFirstPacket;
 
 		internal int m_Seed;
@@ -100,6 +101,33 @@ namespace Server.Network
 			set
 			{
 				m_Flags = value;
+			}
+		}
+
+		public ClientVersion Version
+		{
+			get
+			{
+				return m_Version;
+			}
+			set
+			{
+				m_Version = value;
+
+				if ( value >= m_Version6017 )
+					m_Post6017 = true;
+				else
+					m_Post6017 = false;
+			}
+		}
+
+		private static ClientVersion m_Version6017 = new ClientVersion( "6.0.1.7" );
+
+		private bool m_Post6017;
+
+		public bool IsPost6017 {
+			get { 
+				return m_Post6017; 
 			}
 		}
 
@@ -241,6 +269,14 @@ namespace Server.Network
 
 			if ( m_CreatedCallback != null )
 				m_CreatedCallback( this );
+		}
+
+		public PacketHandler GetHandler( int packetID )
+		{
+			if ( IsPost6017 )
+				return PacketHandlers.Get6017Handler( packetID );
+			else
+				return PacketHandlers.GetHandler( packetID );
 		}
 
 		public void Send( Packet p )
