@@ -169,14 +169,14 @@ namespace Server.Network
 				{
 					int packetID = buffer.GetPacketID();
 
-					if ( !ns.SentFirstPacket && packetID != 0xF1 && packetID != 0xCF && packetID != 0x80 && packetID != 0x91 && packetID != 0xA4 && packetID != 0xBF )
+					if ( !ns.SentFirstPacket && packetID != 0xF0 && packetID != 0xF1 && packetID != 0xCF && packetID != 0x80 && packetID != 0x91 && packetID != 0xA4 && packetID != 0xBF )
 					{
 						log.WarnFormat("Client: {0}: Encrypted client detected, disconnecting", ns);
 						ns.Dispose();
 						break;
 					}
 
-					PacketHandler handler = PacketHandlers.GetHandler( packetID );
+					PacketHandler handler = ns.GetHandler( packetID );
 
 					if ( handler == null )
 					{
