@@ -211,19 +211,34 @@ namespace Server
 			m_From = new SecureTradeInfo( this, from, new SecureTradeContainer( this ) );
 			m_To = new SecureTradeInfo( this, to, new SecureTradeContainer( this ) );
 
+			bool from6017 = ( from.NetState == null ? false : from.NetState.IsPost6017 );
+			bool to6017   = ( to.NetState == null ? false : to.NetState.IsPost6017 );
+
 			from.Send( new MobileStatus( from, to ) );
 			from.Send( new UpdateSecureTrade( m_From.Container, false, false ) );
-			from.Send( new SecureTradeEquip( m_To.Container, to ) );
+			if ( from6017 )
+				from.Send( new SecureTradeEquip6017( m_To.Container, to ) );
+			else
+				from.Send( new SecureTradeEquip( m_To.Container, to ) );
 			from.Send( new UpdateSecureTrade( m_From.Container, false, false ) );
-			from.Send( new SecureTradeEquip( m_From.Container, from ) );
+			if ( from6017 )
+				from.Send( new SecureTradeEquip6017( m_From.Container, from ) );
+			else
+				from.Send( new SecureTradeEquip( m_From.Container, from ) );
 			from.Send( new DisplaySecureTrade( to, m_From.Container, m_To.Container, to.Name ) );
 			from.Send( new UpdateSecureTrade( m_From.Container, false, false ) );
 
 			to.Send( new MobileStatus( to, from ) );
 			to.Send( new UpdateSecureTrade( m_To.Container, false, false ) );
-			to.Send( new SecureTradeEquip( m_From.Container, from ) );
+			if ( to6017 )
+				to.Send( new SecureTradeEquip6017( m_From.Container, from ) );
+			else
+				to.Send( new SecureTradeEquip( m_From.Container, from ) );
 			to.Send( new UpdateSecureTrade( m_To.Container, false, false ) );
-			to.Send( new SecureTradeEquip( m_To.Container, to ) );
+			if ( to6017 )
+				to.Send( new SecureTradeEquip6017( m_To.Container, to ) );
+			else
+				to.Send( new SecureTradeEquip( m_To.Container, to ) );
 			to.Send( new DisplaySecureTrade( from, m_To.Container, m_From.Container, from.Name ) );
 			to.Send( new UpdateSecureTrade( m_To.Container, false, false ) );
 		}
